# regex-automata

./: .gitignore  Cargo.toml
regex-automata-debug/: main.rs
regex-test/src/: lib.rs
src/: classes.rs  config.rs  lib.rs  state_id.rs  word.rs
src/dfa/: automaton.rs  dense.rs  determinize.rs  error.rs  minimize.rs  mod.rs  regex.rs  search.rs  sparse.rs  special.rs  transducer.rs
src/nfa/: error.rs
src/nfa/thompson/: compiler.rs  mod.rs
tests/: tests.rs
tests/dfa/: api.rs  suite.rs
