[package]
name = "regex-automata"
version = "0.1.9"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automata construction and matching using regular expressions."
documentation = "https://docs.rs/regex-automata"
homepage = "https://github.com/BurntSushi/regex-automata"
repository = "https://github.com/BurntSushi/regex-automata"
readme = "README.md"
keywords = ["regex", "dfa", "automata", "automaton", "nfa"]
license = "Unlicense/MIT"
categories = ["text-processing"]
exclude = [
  "/.travis.yml", "/appveyor.yml", "/ci/*", "/scripts/*",
  "/regex-automata-debug",
]
autotests = false
autoexamples = false
edition = "2018"

[badges]
travis-ci = { repository = "BurntSushi/regex-automata" }
appveyor = { repository = "BurntSushi/regex-automata" }

[workspace]
members = ["bench", "examples", "regex-automata-debug", "regex-test"]

[lib]
bench = false

[features]
default = ["std"]
std = ["regex-syntax"]
transducer = ["std", "fst"]

[patch.crates-io]
fst = { version = "0.4.0", path = "/home/andrew/rust/fst" }

[dependencies]
byteorder = { version = "1.2.7", default-features = false }
fst = { version = "0.4.0", optional = true }
regex-syntax = { version = "0.6.16", optional = true }

[dev-dependencies]
bstr = "0.2.12"
regex-syntax = "0.6.16"
regex-test = { version = "*", path = "regex-test" }

[[test]]
path = "tests/tests.rs"
name = "default"

[profile.dev]
# Running tests takes too long in debug mode, so we forcefully always build
# with optimizations. Unfortunate, but, ¯\_(ツ)_/¯.
# opt-level = 3
debug = true

[profile.test]
# Running tests takes too long in debug mode, so we forcefully always build
# with optimizations. Unfortunate, but, ¯\_(ツ)_/¯.
# opt-level = 3
debug = true

[profile.release]
debug = true

[profile.bench]
debug = true
